Add dependency on new fonts
All of them has been fetched and build from google/fonts master repo

--- a/debian/control
+++ b/debian/control
@@ -92,6 +92,11 @@ Build-Depends-Indep: libbytes-random-secure-perl,
  fonts-antykwa-poltawskiego, fonts-antykwa-torunska, fonts-nowacki,
  fonts-dejavu, fonts-linuxlibertine, fonts-sil-charis,
  fonts-paratype, lmodern, fonts-lmodern,
+ fonts-alegreya, fonts-alegreyasans, fonts-anonymouspro,
+ fonts-archivonarrow, fonts-arvo, fonts-chivo, fonts-crimsontext,
+ fonts-firasans, fonts-inknutantiqua, fonts-karla,
+ fonts-librefranklin, fonts-lora, fonts-merriweather, fonts-poppins,
+ fonts-rubik, fonts-sourcesanspro, fonts-spacemono, fonts-vollkorn,
  texlive-base, texlive-latex-base, texlive-latex-recommended, texlive-latex-extra,
  texlive-generic-recommended, texlive-fonts-recommended,
  texlive-luatex, texlive-xetex, texlive-lang-all
@@ -192,6 +197,11 @@ Depends: ${misc:Depends}, ${perl:Depends},
  fonts-antykwa-poltawskiego, fonts-antykwa-torunska, fonts-nowacki,
  fonts-dejavu, fonts-linuxlibertine, fonts-sil-charis,
  fonts-paratype, lmodern, fonts-lmodern,
+ fonts-alegreya, fonts-alegreyasans, fonts-anonymouspro,
+ fonts-archivonarrow, fonts-arvo, fonts-chivo, fonts-crimsontext,
+ fonts-firasans, fonts-inknutantiqua, fonts-karla,
+ fonts-librefranklin, fonts-lora, fonts-merriweather, fonts-poppins,
+ fonts-rubik, fonts-sourcesanspro, fonts-spacemono, fonts-vollkorn,
  texlive-base, texlive-latex-base, texlive-latex-recommended, texlive-latex-extra,
  texlive-generic-recommended, texlive-fonts-recommended,
  texlive-luatex, texlive-xetex, texlive-lang-all
