Remove unusable fonts (style missing/mismatching/etc.)

--- a/debian/control
+++ b/debian/control
@@ -93,8 +93,8 @@ Build-Depends-Indep: libbytes-random-secure-perl,
  fonts-dejavu, fonts-linuxlibertine, fonts-sil-charis,
  fonts-paratype, lmodern, fonts-lmodern,
  fonts-alegreya, fonts-alegreyasans, fonts-anonymouspro,
- fonts-archivonarrow, fonts-arvo, fonts-chivo, fonts-crimsontext,
- fonts-firasans, fonts-inknutantiqua, fonts-karla,
+ fonts-archivonarrow, fonts-arvo, fonts-crimsontext,
+ fonts-firasans, fonts-karla,
  fonts-librefranklin, fonts-lora, fonts-merriweather, fonts-poppins,
  fonts-rubik, fonts-sourcesanspro, fonts-spacemono, fonts-vollkorn,
  texlive-base, texlive-latex-base, texlive-latex-recommended, texlive-latex-extra,
@@ -198,8 +198,8 @@ Depends: ${misc:Depends}, ${perl:Depends},
  fonts-dejavu, fonts-linuxlibertine, fonts-sil-charis,
  fonts-paratype, lmodern, fonts-lmodern,
  fonts-alegreya, fonts-alegreyasans, fonts-anonymouspro,
- fonts-archivonarrow, fonts-arvo, fonts-chivo, fonts-crimsontext,
- fonts-firasans, fonts-inknutantiqua, fonts-karla,
+ fonts-archivonarrow, fonts-arvo, fonts-crimsontext,
+ fonts-firasans, fonts-karla,
  fonts-librefranklin, fonts-lora, fonts-merriweather, fonts-poppins,
  fonts-rubik, fonts-sourcesanspro, fonts-spacemono, fonts-vollkorn,
  texlive-base, texlive-latex-base, texlive-latex-recommended, texlive-latex-extra,
