Add Coelacanth font
It has no bold italic, but it's too good, fancy, readable to keep it
out. It was featured in the TUG update from September.

--- a/debian/control
+++ b/debian/control
@@ -94,7 +94,7 @@ Build-Depends-Indep: libbytes-random-secure-perl,
  fonts-paratype, lmodern, fonts-lmodern,
  fonts-alegreya, fonts-alegreyasans, fonts-anonymouspro,
  fonts-archivonarrow, fonts-arvo, fonts-crimsontext,
- fonts-firasans, fonts-karla,
+ fonts-firasans, fonts-karla, fonts-coelacanth,
  fonts-librefranklin, fonts-lora, fonts-merriweather, fonts-poppins,
  fonts-rubik, fonts-sourcesanspro, fonts-spacemono, fonts-vollkorn,
  texlive-base, texlive-latex-base, texlive-latex-recommended, texlive-latex-extra,
@@ -199,7 +199,7 @@ Depends: ${misc:Depends}, ${perl:Depends},
  fonts-paratype, lmodern, fonts-lmodern,
  fonts-alegreya, fonts-alegreyasans, fonts-anonymouspro,
  fonts-archivonarrow, fonts-arvo, fonts-crimsontext,
- fonts-firasans, fonts-karla,
+ fonts-firasans, fonts-karla, fonts-coelacanth,
  fonts-librefranklin, fonts-lora, fonts-merriweather, fonts-poppins,
  fonts-rubik, fonts-sourcesanspro, fonts-spacemono, fonts-vollkorn,
  texlive-base, texlive-latex-base, texlive-latex-recommended, texlive-latex-extra,
