Move the fancy fonts in amusewiki-extra-fonts package

--- a/debian/control
+++ b/debian/control
@@ -87,16 +87,6 @@ Build-Depends-Indep: libbytes-random-secure-perl,
  poppler-utils,
  git, fontconfig,
  fonts-cmu, fonts-texgyre,
- fonts-cormorant-garamond,
- fonts-sil-gentium-basic,
- fonts-antykwa-poltawskiego, fonts-antykwa-torunska, fonts-nowacki,
- fonts-dejavu, fonts-linuxlibertine, fonts-sil-charis,
- fonts-paratype, lmodern, fonts-lmodern,
- fonts-alegreya, fonts-alegreyasans, fonts-anonymouspro,
- fonts-archivonarrow, fonts-arvo, fonts-crimsontext,
- fonts-firasans, fonts-karla, fonts-coelacanth,
- fonts-librefranklin, fonts-lora, fonts-merriweather, fonts-poppins,
- fonts-rubik, fonts-sourcesanspro, fonts-spacemono, fonts-vollkorn,
  texlive-base, texlive-latex-base, texlive-latex-recommended, texlive-latex-extra,
  texlive-generic-recommended, texlive-fonts-recommended,
  texlive-luatex, texlive-xetex, texlive-lang-all
@@ -192,19 +182,10 @@ Depends: ${misc:Depends}, ${perl:Depends},
  libcgi-compile-perl,
  cgit, ckeditor, nginx, git, fontconfig,
  fonts-cmu, fonts-texgyre,
- fonts-cormorant-garamond,
- fonts-sil-gentium-basic,
- fonts-antykwa-poltawskiego, fonts-antykwa-torunska, fonts-nowacki,
- fonts-dejavu, fonts-linuxlibertine, fonts-sil-charis,
- fonts-paratype, lmodern, fonts-lmodern,
- fonts-alegreya, fonts-alegreyasans, fonts-anonymouspro,
- fonts-archivonarrow, fonts-arvo, fonts-crimsontext,
- fonts-firasans, fonts-karla, fonts-coelacanth,
- fonts-librefranklin, fonts-lora, fonts-merriweather, fonts-poppins,
- fonts-rubik, fonts-sourcesanspro, fonts-spacemono, fonts-vollkorn,
  texlive-base, texlive-latex-base, texlive-latex-recommended, texlive-latex-extra,
  texlive-generic-recommended, texlive-fonts-recommended,
  texlive-luatex, texlive-xetex, texlive-lang-all
+Recommends: amusewiki-extra-fonts
 Description: library-oriented wiki engine, publishing and authoring platform
  Features: Multi-site engine, user-friendly markup borrowed from Emacs
  Muse, importing of HTML documents preserving most of the logical
